# Little-Investor-web3

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  SECURITY.md  deploy-contract.sh  index.html  index.js  info.txt  package-lock.json  package.json  server.js  stellar-helper.js  vercel.json
.github/workflows/: contract-ci.yml  frontend-ci.yml
contracts/certificate/: Cargo.toml
contracts/certificate/src/: lib.rs  test.rs
contracts/certificate/test_snapshots/test/: test_cannot_initialize_twice.1.json  test_cert_count_increments_per_learner.1.json  test_get_certificate_details.1.json  test_initialize_sets_admin.1.json  test_issue_certificate_returns_id.1.json  test_revoke_certificate.1.json  test_verify_nonexistent_returns_false.1.json  test_verify_valid_certificate.1.json
contracts/vault/: Cargo.toml
course_catalog_littleinvestors/: code.html
css/: main.css
docs/: BLACK_BELT_EVIDENCE.md  DEMO_DAY.md  MONITORING_RUNBOOK.md  USER_GUIDE.md
get_certified_littleinvestors/: code.html
js/: pendo-init.js  script.js  stellar-helper.js
lesson_1_intro_to_blockchain/: code.html
littleinvestors_landing_page/: code.html
lumina_ledger/: DESIGN.md
relayer/data/: level6-proof-summary.json  readme-wallet-table.txt  transactions.json  user-validation-results.json  user-validation-table.md
scripts/: proof_of_users.json  run-wallet-proof.js  simulate_users.js  simulation_results.json  testnet_activity.json
src/controller/: chatController.js  mainController.js  quizController.js  (+2 more)
student_dashboard/: code.html
test/: stellar.test.js
(+20 files in other folders)
